<resources>
    <string name="app_name">MenuPoints</string>
    <string name="menu">Меню</string>
    <string name="upload_excel">Загрузить Excel</string>
    <string name="reset">Сбросить</string>
    <string name="points_title">Точки</string>
    <string name="new_point_button">Новая точка</string>
    <string name="note">Заметки</string>
    <string name="edit">Редактировать</string>
    <string name="delete">Удалить</string>
    <string name="points">Точки</string>
    <string name="create_point_first">Сначала создайте точку</string>
    <string name="reset_all_marks">Сброс всех отметок</string>
    <string name="reset_all_marks_confirm">Сбросить все отметки для ВСЕХ точек?</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="all_marks_reset">Все отметки сброшены</string>
    <string name="new_menu_proposed">Предложено новое меню</string>
    <string name="new_menu_proposed_message">Предложено новое меню (%d блюд).\n\nПрименить для ВСЕХ точек?</string>
    <string name="apply">Применить</string>
    <string name="reject">Отклонить</string>
    <string name="preview">Просмотреть</string>
    <string name="menu_preview">Предпросмотр меню</string>
    <string name="back">Назад</string>
    <string name="updating">Обновление</string>
    <string name="updating_menu_for_all_points">Обновляем меню для всех точек...</string>
    <string name="menu_updated_for_points">Меню обновлено для %d точек</string>
    <string name="error">Ошибка: %s</string>
    <string name="load_error">Ошибка загрузки: %s</string>
    <string name="point_name_hint">Название точки</string>
    <string name="new_point">Новая точка</string>
    <string name="create">Создать</string>
    <string name="cancel">Отмена</string>
    <string name="rename">Переименовать</string>
    <string name="save">Сохранить</string>
    <string name="delete_point">Удалить точку</string>
    <string name="delete_point_confirm">Удалить «%s»?</string>
    <string name="select_excel">Выберите Excel файл</string>
    <string name="loaded_dishes">Загружено %d блюд</string>
    <string name="no_dishes_found">Не найдено блюд</string>
    <string name="parse_error">Ошибка: %s</string>
    <string name="note_saved">Заметка сохранена</string>
    <string name="category_format">📌 %s</string>
</resources>